# mars

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
examples/triangle/: CMakeLists.txt
examples/triangle/src/: main.c
src/: mars.h
src/mars/: common.h  display.c  display.h  game.c  game.h  input.c  input.h  renderer.c  renderer.h  renderer_vk.c  renderer_vk.h  resource.c  resource.h  settings.c  settings.h  shader.h  vertex.c  vertex.h
src/mars/std/: base64.c  base64.h  buffer.c  buffer.h  debug.c  debug.h  deque.c  deque.h  free_list.c  free_list.h  inline_defs.h  platform.h  priority_queue.c  priority_queue.h  queue.c  queue.h  stack.c  stack.h  unordered_map.c  unordered_map.h  unordered_map_str.c  unordered_map_str.h  utilities.c  utilities.h  vector.c  vector.h
